--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.15.3",
+    "rxjs": "^6.3.3",
     "ts-loader": "^5.3.1",
     "tslint": "^5.11.0",
     "typescript": "^3.2.2",
