--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "deploy:gh-pages": "gh-pages -d dist",
+    "deploy": "yarn build && yarn deploy:gh-pages",
     "start": "webpack-dev-server",
     "build": "webpack"
   },
@@ -11,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.15.3",
     "rxjs": "^6.3.3",
