--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "devDependencies": {
+    "css-loader": "^2.0.0",
+    "style-loader": "^0.23.1"
   }
 }
