--- a/package.json
+++ b/package.json
@@ -7,25 +7,31 @@
     "deploy:gh-pages": "gh-pages -d dist",
     "deploy": "yarn build && yarn deploy:gh-pages",
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "karma start --single-run",
+    "test:dev": "karma start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "@types/jasmine": "^3.3.2",
+    "css-loader": "^2.0.0",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jasmine-core": "^3.3.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-typescript": "^3.0.13",
+    "karma": "^3.1.3",
     "prettier": "^1.15.3",
     "rxjs": "^6.3.3",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.1",
     "tslint": "^5.11.0",
     "typescript": "^3.2.2",
-    "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
-  },
-  "devDependencies": {
-    "css-loader": "^2.0.0",
-    "style-loader": "^0.23.1"
+    "webpack-dev-server": "^3.1.10",
+    "webpack": "^4.27.1"
   }
 }
